# GameEngine

./: CMakeLists.txt  README.md  test.txt
include/headers/: game.h  glad.h  shader.h
src/: game.cpp  glad.c  main.cpp  shader.cpp
